--- a/style.css
+++ b/style.css
@@ -1,23 +1,22 @@
 body {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 600px;
-  background-color: lightblue;
+  height: 500px;
+  background-color: lightskyblue;
 }
 
 .board {
-  border: 1px solid black;
-  height: 300px;
-  width: 300px;
   display: inline-grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
+  width: 300px;
+  height: 300px;
+  border: 2px solid black;
   background-color: white;
 }
 
-.cells {
+.cell {
   border: 1px solid black;
   display: flex;
   justify-content: center;
