--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
   height: 300px;
   border: 2px solid black;
   background-color: white;
+  margin-top: 10px;
 }
 
 .cell {
@@ -21,4 +22,35 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.turn {
+  font-size: 20px;
+  height: 50px;
+  width: 150px;
+  margin: 0 auto;
+  /* border: 2px solid black; */
+  text-align: center;
+}
+
+.container-one,
+.container-two {
+  display: flex;
+}
+
+.first-player,
+.second-player {
+  font-size: 20px;
+  height: 50px;
+  width: 150px;
+  /* border: 2px solid black; */
+  text-align: center;
+}
+
+.first-player {
+  margin-right: 50px;
+}
+
+.second-player {
+  margin-left: 50px;
 }
